force-app/main/default/objects/Bankin__c/Bankin__c.object-meta.xml
<CustomObject>
    <label>Banking</label>
    <nameField>
        <label>Bankin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bankings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>