force-app/main/default/objects/Bankin__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(Name, left(Name,find(&quot; &quot;,Name)),&quot;&quot;),left(SUBSTITUTE(Name, left(Name,find(&quot; &quot;,Name)),&quot;&quot;),find(&quot; &quot;,SUBSTITUTE(Name, left(Name,find(&quot; &quot;,Name)),&quot;&quot;))), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>