force-app/main/default/objects/Bankin__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <formula>left(SUBSTITUTE(Name, left(Name,find(&quot; &quot;,Name)),&quot;&quot;),find(&quot; &quot;,SUBSTITUTE(Name, left(Name,find(&quot; &quot;,Name)),&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Middle Name</label>
    <type>Text</type>
</CustomField>