force-app/main/default/objects/Bankin__c/recordTypes/manager.recordType-meta.xml
<RecordType>
    <fullName>manager</fullName>
    <active>true</active>
    <label>manager</label>
</RecordType>