force-app/main/default/objects/Bankin__c/recordTypes/PO.recordType-meta.xml
<RecordType>
    <fullName>PO</fullName>
    <active>false</active>
    <label>PO</label>
</RecordType>