force-app/main/default/objects/Bankin__c/validationRules/validate_Picklist_levels.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_Picklist_levels</fullName>
    <active>true</active>
    <errorConditionFormula>if(Isnew(),if(text(PickList__c)!=&quot;A&quot;,true,false),if(text(priorvalue(PickList__c))==&quot;A&quot;,text( PickList__c )!=&quot;B&quot;,if(text(priorvalue(PickList__c))==&quot;B&quot;,text( PickList__c )!=&quot;C&quot;,if(text(priorvalue(PickList__c))==&quot;C&quot;,text( PickList__c )!=&quot;D&quot;,if(text(priorvalue(PickList__c))==&quot;D&quot;,text( PickList__c )!=&quot;D&quot;,false)))))</errorConditionFormula>
    <errorDisplayField>PickList__c</errorDisplayField>
    <errorMessage>error</errorMessage>
</ValidationRule>