force-app/main/default/objects/Bankin__c/validationRules/validate_picklist_levels1.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_picklist_levels1</fullName>
    <active>false</active>
    <errorConditionFormula>if(text( PickList__c )!=&quot;A&quot;,true,false)</errorConditionFormula>
    <errorMessage>errer</errorMessage>
</ValidationRule>