force-app/main/default/objects/Bankin__c/validationRules/validate_Picklist_levels_sd.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_Picklist_levels_sd</fullName>
    <active>false</active>
    <errorConditionFormula>if(isnew(),false,true)</errorConditionFormula>
    <errorDisplayField>PickList__c</errorDisplayField>
    <errorMessage>error</errorMessage>
</ValidationRule>